--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,4 @@ deployment:
   staging:
     branch: master
     heroku: 
-      appname: pdsw-2018-1-proyecto-los-sin-n
+      appname: bancoiniciativa
