--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
                 <version>2.2</version>
                 <configuration>
                     <port>8080</port>
-                    <path>/</path>
+                    <path>/faces/login.xhtml</path>
                 </configuration>
             </plugin>
           <!-- Plugin configuration for Heroku compatibility. -->
@@ -224,6 +224,37 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/target/Postgrado-ECI/resources
+                            </outputDirectory>
+                            <resources>          
+                                <resource>
+                                    <directory>src/main/webapp/resources</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>              
+                        </configuration>            
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <url>http://repository.primefaces.org/</url>
+            <id>PrimeFaces-maven-lib</id>
+            <layout>default</layout>
+            <name>Repository for library PrimeFaces-maven-lib</name>
+        </repository>
+    </repositories>
 </project>
